apps/base/network-system/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forward-auth
spec:
  forwardAuth:
    address: http://10.0.7.205:8008/api/verify?rd=https://auth.${SECRET_DOMAIN}/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
